added ang First task of first lesson

--- a/index.html
+++ b/index.html
@@ -3,8 +3,92 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+
 </head>
 <body>
-    <h1>Hello bro</h1>
+
+<table cellpadding="10">
+
+    <thead>
+
+    <tr>
+
+        <th>Фото</th>
+
+        <th>Имя</th>
+
+        <th>Стихия</th>
+
+        <th>Википедия</th>
+
+    </tr>
+
+    </thead>
+
+    <tbody>
+
+    <tr>
+
+        <td><a href="aang.png"><img src="aang.png" width="50px" alt=""></a></td>
+
+        <td>Aang</td>
+
+        <td><a href="stixia_aang.jpg" width="50px"><img src="stixia_aang.jpg" width="50" alt=""></a></td>
+
+        <td><a href="https://avatar.fandom.com/wiki/Aang">Википедия</a></td>
+
+    </tr>
+
+    <tr>
+
+        <td><a href="aang.png"><img src="aang.png" width="50px" alt=""></a></td>
+
+        <td>Aang</td>
+
+        <td><a href="stixia_aang.jpg" width="50px"><img src="stixia_aang.jpg" width="50" alt=""></a></td>
+
+        <td><a href="https://avatar.fandom.com/wiki/Aang">Википедия</a></td>
+
+    </tr>
+
+    <tr>
+
+        <td><a href="aang.png"><img src="aang.png" width="50px" alt=""></a></td>
+
+        <td>Aang</td>
+
+        <td><a href="stixia_aang.jpg" width="50px"><img src="stixia_aang.jpg" width="50" alt=""></a></td>
+
+        <td><a href="https://avatar.fandom.com/wiki/Aang">Википедия</a></td>
+
+    </tr>
+
+    <tr>
+
+        <td><a href="aang.png"><img src="aang.png" width="50px" alt=""></a></td>
+
+        <td>Aang</td>
+
+        <td><a href="stixia_aang.jpg" width="50px"><img src="stixia_aang.jpg" width="50" alt=""></a></td>
+
+        <td><a href="https://avatar.fandom.com/wiki/Aang">Википедия</a></td>
+
+    </tr>
+
+    <tr>
+
+        <td><a href="aang.png"><img src="aang.png" width="50px" alt=""></a></td>
+
+        <td>Aang</td>
+
+        <td><a href="stixia_aang.jpg" width="50px"><img src="stixia_aang.jpg" width="50" alt=""></a></td>
+
+        <td><a href="https://avatar.fandom.com/wiki/Aang">Википедия</a></td>
+
+    </tr>
+    </tbody>
+
+</table>
+
 </body>
 </html>
