added ang First task of first lesson

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 </head>
 <body>
 
+<h2>First task</h2>
 <table cellpadding="10">
 
     <thead>
@@ -86,9 +87,10 @@
         <td><a href="https://avatar.fandom.com/wiki/Aang">Википедия</a></td>
 
     </tr>
+
     </tbody>
 
 </table>
-
+<h2>Second task</h2>
 </body>
 </html>
