added five tasks

--- a/index.html
+++ b/index.html
@@ -6,6 +6,237 @@
 
 </head>
 <body>
+<h2>Fifth task</h2>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>Fourth task</h2>
+<table cellpadding="15px">
+    <tr>
+        <td> <a href="aang.png"><img src="aang.png" width="100px"></a>
+            <br><a href="aang.png">View full image</a>
+        </td>
+        <td> <a href="stixia_aang.jpg"><img src="stixia_aang.jpg" width="100px"></a>
+            <br><a href="aang.png">View full image</a>
+        </td>
+        <td> <a href="stixia_aang.jpg"><img src="stixia_aang.jpg" width="100px"></a>
+            <br><a href="aang.png">View full image</a>
+        </td>
+    </tr>
+
+    <tr>
+        <td> <a href="hacker.png"><img src="hacker.png" width="100px"></a>
+            <br><a href="aang.png">View full image</a>
+        </td>
+        <td> <a href="aang.png"><img src="aang.png" width="100px"></a>
+            <br><a href="aang.png">View full image</a>
+        </td>
+        <td> <a href="hacker.png"><img src="hacker.png" width="100px"></a>
+            <br><a href="aang.png">View full image</a>
+        </td>
+    </tr>
+
+</table>
+<br>
+<br>
+<br>
+<br>
+<br>
+<h2>Third task</h2>
+
+<table>
+    <thead>
+
+    </thead>
+    <tbody>
+    <tr>
+        <td>
+            Имя:
+        </td>
+        <td>
+            <input type="text">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Фамилия:
+        </td>
+        <td>
+            <input type="text">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Отчество:
+        </td>
+        <td>
+            <input type="text">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Родной город:
+        </td>
+        <td>
+            <select>
+                <option>Алматы</option>
+
+                <option>Астана</option>
+
+                <option>свой вариант</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Пол:
+        </td>
+        <td>
+            <input type="radio" name="gender">М <br>
+            <input type="radio" name="gender">Ж
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Дата рождения:
+        </td>
+        <td>
+            <input type="date">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Образование:
+        </td>
+        <td>
+            <select>
+                <option>РФМШ г.Алматы</option>
+
+                <option>РФМШ г.Алматы</option>
+
+                <option>РФМШ г.Алматы</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Баллы ЕНТ:
+        </td>
+        <td>
+            <input type="number" placeholder="0">
+        </td>
+    </tr>
+
+
+    <tr>
+        <td> <button > Зарегистрировать </button></td>
+    </tr>
+    </tbody>
+</table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<h2>Second task</h2>
+
+<table>
+    <thead>
+
+    </thead>
+    <tbody>
+    <tr>
+        <td>
+            Тип булочки:
+        </td>
+        <td>
+            <select>
+                <option>Булочки для гамбургеров 1</option>
+
+                <option>Булочки для гамбургеров 2</option>
+
+                <option>Булочки для гамбургеров 3</option>
+
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Тип мяса:
+        </td>
+        <td>
+            <select>
+                <option>мясо 1</option>
+
+                <option>мясо 2</option>
+
+                <option>мясо 3</option>
+
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Опции:
+        </td>
+        <td>
+            <input type="checkbox"> помидор <br>
+            <input type="checkbox"> соленые огурцы
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Адрес:
+        </td>
+        <td>
+            <input type="text" placeholder="Введите адрес">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Ф.И.О. Заказчика:
+        </td>
+        <td>
+            <input type="text" placeholder="Введите Ф.И.О.">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Желаемое время доставки:
+        </td>
+        <td>
+            <input type="date">
+        </td>
+    </tr>
+    <tr>
+        <td>
+            Ф.И.О. Заказчика:
+        </td>
+        <td>
+            <select>
+                <option>гамбургер 1</option>
+
+                <option>чизбургер 2</option>
+
+                <option>гамбургер 3</option>
+            </select>
+        </td>
+    </tr>
+    <tr>
+        <td> <button > Заказать </button></td>
+    </tr>
+    </tbody>
+</table>
+
+<br>
+<br>
+<br>
+<br>
+<br>
 
 <h2>First task</h2>
 <table cellpadding="10">
@@ -91,6 +322,5 @@
     </tbody>
 
 </table>
-<h2>Second task</h2>
 </body>
 </html>
