was added first lesson's practice works by Akzhol

--- a/index.html
+++ b/index.html
@@ -6,7 +6,99 @@
 
 </head>
 <body>
+
+<h2>Sixth task</h2>
+<table cellpadding="10px">
+<tbody>
+    <tr>
+        <td>Имя</td>
+        <td>Фамилия</td>
+        <td>Логин</td>
+    </tr>
+    <tr>
+        <td><input type="text" placeholder="Имя"></td>
+        <td><input type="text" placeholder="Фамилия"></td>
+        <td><input type="text" placeholder="Логин"></td>
+    </tr>
+    <tr>
+        <td>Страна</td>
+        <td>Город</td>
+        <td>Улица</td>
+    </tr>
+    <tr>
+        <td><select>
+            <option>Казахстан</option>
+            <option selected>Британия</option>
+            <option>Ирландия</option>
+        </select></td>
+        <td><select>
+            <option>Алматы</option>
+            <option selected>Бирмингем</option>
+            <option>Дублин</option>
+        </select></td>
+        <td><input type="text" placeholder="Улица"></td>
+    </tr>
+<tr>
+    <td> <button > Загрузить данные </button></td>
+</tr>
+</tbody>
+</table>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
 <h2>Fifth task</h2>
+
+<table cellpadding="10px">
+    <head>
+        <th>#</th>
+        <th>Имя</th>
+        <th>Фамилия</th>
+        <th>Клуб</th>
+        <th>Стоимость (euro)</th>
+    </head>
+    <tbody>
+        <tr>
+            <td>1</td>
+            <td>Leo</td>
+            <td>Messi</td>
+            <td>FC Barcelona</td>
+            <td>70.000.000</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Cristiano</td>
+            <td>Ronaldo</td>
+            <td>FC Real Madrid</td>
+            <td>50.000.000</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cilian</td>
+            <td>Mbappe</td>
+            <td>PSG</td>
+            <td>140.000.000</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Erling</td>
+            <td>Haaland</td>
+            <td>FC Borussia Dortmund</td>
+            <td>120.000.000</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Harry</td>
+            <td>Kane</td>
+            <td>Tottanham</td>
+            <td>80.000.000</td>
+        </tr>
+    </tbody>
+</table>
+
 <br>
 <br>
 <br>
