was added Second Sprint Task by Akzhol

--- a/index.html
+++ b/index.html
@@ -3,10 +3,158 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>BITLAB SHOP</title>
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+            href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;500;600;700&display=swap"
+            rel="stylesheet"
+    />
 </head>
 <body>
+<h2>Sprint task 2</h2>
 
+<header>
+    <nav class="container">
+        <ul>
+            <li><a class="main-link" href="#bitlab-shop">BITLAB SHOP</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#news">About Us</a></li>
+            <li><a href="#contact">Products</a></li>
+            <li><a href="#about">Services</a></li>
+        </ul>
+        <form action="" class="search-form">
+            <input type="text" placeholder="Search" />
+            <button class="btn btn-mini">Go</button>
+        </form>
+    </nav>
+</header>
+<section id="main-words">
+    <h1>The best e-shop in our country!</h1>
+    <p>
+        BITLAB SHOP Market was founded on 2015, by a team programmers and
+        sellers.
+    </p>
+    <button class="btn btn-big">Know more</button>
+</section>
+<section id="statistics">
+    <div class="wrapper container">
+        <div class="info">
+            <span class="number">67</span>
+            <span class="words">Happy clients</span>
+        </div>
+        <div class="info">
+            <span class="number">59</span>
+            <span class="words">Projects</span>
+        </div>
+        <div class="info">
+            <span class="number">7</span>
+            <span class="words">Year of experience</span>
+        </div>
+        <div class="info">
+            <span class="number">31</span>
+            <span class="words">Developers</span>
+        </div>
+    </div>
+</section>
+<section id="gallery">
+    <h2>GALLERY</h2>
+    <div class="wrapper">
+        <div class="wrapper-image">
+            <div>
+                <img
+                        src="https://www.mechta.kz/export/1cbitrix/import_files/27/272913ae-3156-11ec-a23f-005056b6dbd7-1024.webp"
+                        alt="Laptop"
+                />
+            </div>
+            <div>
+                <img
+                        src="https://www.mechta.kz/export/1cbitrix/import_files/45/457b8aab-66c4-11eb-a23a-005056b6dbd7-1024.webp"
+                        alt="Samsung phone"
+                />
+            </div>
+        </div>
+        <div class="wrapper-image">
+            <div>
+                <img
+                        src="https://www.mechta.kz/export/1cbitrix/import_files/20/2061f621-da1d-11eb-a23f-005056b6dbd7-1024.webp"
+                        alt="Samsung tablet"
+                />
+            </div>
+            <div>
+                <img
+                        src="https://www.mechta.kz/export/1cbitrix/import_files/11/1199bee8-2a45-11ec-a23f-005056b6dbd7-1024.webp"
+                        alt="Apple watch"
+                />
+            </div>
+        </div>
+        <div class="wrapper-image">
+            <div>
+                <img
+                        src="https://www.mechta.kz/export/1cbitrix/import_files/1e/1efa0db5-7f1e-11ec-a243-005056b6dbd7-1024.webp"
+                        alt="Computer"
+                />
+            </div>
+            <div>
+                <img
+                        src="https://www.mechta.kz/export/1cbitrix/import_files/fc/fc99ae54-0491-11ec-a23f-005056b6dbd7-1024.webp"
+                        alt="Smart watch"
+                />
+            </div>
+        </div>
+    </div>
+</section>
+<section id="team">
+    <div class="container">
+        <h2>TEAM</h2>
+        <p>Our team is one the most friendly teams in the world. They are professionals on their job. Most of them knows at least 3 languages. Certified sellers, market analytics, business developers and best project managers are included in our team.</p>
+        <div class="wrapper">
+            <div class="wrapper-card">
+                <img src="https://www.bluleadz.com/hubfs/About_Us_2019/New_BZ_Team_Headshots_2019/dougphillips.jpeg" alt="Person 1">
+                <div class="person-info">
+                    <h3>Doug Phillips</h3>
+                    <p>Chief Executive Officer</p>
+                </div>
+            </div>
+            <div class="wrapper-card">
+                <img src="https://www.bluleadz.com/hubfs/About_Us_2019/New_BZ_Team_Headshots_2019/baylorcherry-2.jpg" alt="Person 2">
+                <div class="person-info">
+                    <h3>Baylor Cherry</h3>
+                    <p>Developer</p>
+                </div>
+            </div>
+            <div class="wrapper-card">
+                <img src="https://www.bluleadz.com/hubfs/About_Us_2019/New_BZ_Team_Headshots_2019/kenny-1.jpg" alt="Person 3">
+                <div class="person-info">
+                    <h3>Kenny Kavanagh</h3>
+                    <p>Business Analysis</p>
+                </div>
+            </div>
+            <div class="wrapper-card">
+                <img src="https://www.bluleadz.com/hubfs/About_Us_2019/New_BZ_Team_Headshots_2019/gabriela-kostadinova-headshot.jpg" alt="Person 4">
+                <div class="person-info">
+                    <h3>Gabriela Kostadinova</h3>
+                    <p>Web Designer & Developer</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<footer class="container">
+    <div>
+        <p>© Copyright <span>Bitlab.</span> All Rights Reserved 2022</p>
+        <p>Designed by <span><a href="bitlab-team">Bitlab Team</a></span></p>
+    </div>
+</footer>
+
+<br>
+<br>
+<br>
+<br>
 <h2>Sixth task</h2>
 <table cellpadding="10px">
 <tbody>
